--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,16 @@
   ],
   "license": "proprietary",
   "require": {
-      "php": "^7.1.3",
-      "doctrine/dbal": "^2.9",
-      "fideloper/proxy": "^4.0",
-      "fzaninotto/faker": "^1.8",
-      "kyslik/column-sortable": "^5.8",
-      "laravel/framework": "5.8.*",
-      "laravel/tinker": "^1.0",
-      "maatwebsite/excel": "^3.1",
-      "recca0120/laravel-tracy": "v1.8.23"
+    "php": "^7.1.3",
+    "barryvdh/laravel-cors": "^0.11.3",
+    "doctrine/dbal": "^2.9",
+    "fideloper/proxy": "^4.0",
+    "fzaninotto/faker": "^1.8",
+    "kyslik/column-sortable": "^5.8",
+    "laravel/framework": "5.8.*",
+    "laravel/tinker": "^1.0",
+    "maatwebsite/excel": "^3.1",
+    "recca0120/laravel-tracy": "v1.8.23"
   },
   "require-dev": {
       "beyondcode/laravel-dump-server": "^1.0",
