--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "license": "proprietary",
   "require": {
     "php": "^7.1.3",
+    "tymon/jwt-auth": "0.5.*",
     "barryvdh/laravel-cors": "^0.11.3",
     "doctrine/dbal": "^2.9",
     "fideloper/proxy": "^4.0",
