--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,8 @@ indent_size = 4
 trim_trailing_whitespace = true
 
 [*.js]
-indent_style = tab
+indent_style = space
+indent_size = 2
 
 [lib/**.js]
 indent_style = space
