--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
   "license": "proprietary",
   "require": {
     "php": "^7.1.3",
-    "tymon/jwt-auth": "0.5.*",
     "barryvdh/laravel-cors": "^0.11.3",
     "doctrine/dbal": "^2.9",
     "fideloper/proxy": "^4.0",
@@ -18,8 +17,8 @@
     "laravel/framework": "5.8.*",
     "laravel/tinker": "^1.0",
     "maatwebsite/excel": "^3.1",
-    "recca0120/laravel-tracy": "v1.8.23",
-    "staudenmeir/laravel-upsert": "^1.0"
+    "staudenmeir/laravel-upsert": "^1.0",
+    "tymon/jwt-auth": "1.0.*"
   },
   "require-dev": {
       "beyondcode/laravel-dump-server": "^1.0",
