--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "laravel/tinker": "^1.0",
     "maatwebsite/excel": "^3.1",
     "staudenmeir/laravel-upsert": "^1.0",
-    "tymon/jwt-auth": "1.0.*"
+    "tymon/jwt-auth": "1.0.*",
+      "ext-json": "*"
   },
   "require-dev": {
       "beyondcode/laravel-dump-server": "^1.0",
