--- a/composer.json
+++ b/composer.json
@@ -16,17 +16,18 @@
     "kyslik/column-sortable": "^5.8",
     "laravel/framework": "5.8.*",
     "laravel/tinker": "^1.0",
+      "laravel/passport": "^7.5.1",
     "maatwebsite/excel": "^3.1",
     "staudenmeir/laravel-upsert": "^1.0",
-    "tymon/jwt-auth": "1.0.*",
       "ext-json": "*"
   },
   "require-dev": {
-      "beyondcode/laravel-dump-server": "^1.0",
-      "filp/whoops": "^2.0",
-      "mockery/mockery": "^1.0",
-      "nunomaduro/collision": "^3.0",
-      "phpunit/phpunit": "^7.5"
+    "barryvdh/laravel-ide-helper": "^2.6",
+    "beyondcode/laravel-dump-server": "^1.0",
+    "filp/whoops": "^2.0",
+    "mockery/mockery": "^1.0",
+    "nunomaduro/collision": "^3.0",
+    "phpunit/phpunit": "^7.5"
   },
   "config": {
       "optimize-autoloader": true,
