--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,17 @@
   "license": "proprietary",
   "require": {
     "php": "^7.1.3",
-    "barryvdh/laravel-cors": "^0.11.3",
+    "ext-json": "*",
     "doctrine/dbal": "^2.9",
     "fideloper/proxy": "^4.0",
+    "fruitcake/laravel-cors": "^1.0",
     "fzaninotto/faker": "^1.8",
     "kyslik/column-sortable": "^5.8",
     "laravel/framework": "5.8.*",
+    "laravel/passport": "^7.5.1",
     "laravel/tinker": "^1.0",
-      "laravel/passport": "^7.5.1",
     "maatwebsite/excel": "^3.1",
-    "staudenmeir/laravel-upsert": "^1.0",
-      "ext-json": "*"
+    "staudenmeir/laravel-upsert": "^1.0"
   },
   "require-dev": {
     "barryvdh/laravel-ide-helper": "^2.6",
